--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Dec 12 2024 18:56:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="6759f20ba5c2e01c808775c3" data-wf-site="6759f20ba5c2e01c808775a0">
 <head>
   <meta charset="utf-8">
