Fix: Alterações URL typeform

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </li>
               <li class="mobile-margin-top-10">
                 <!-- <a href="#" class="btn inverter stroke menu w-button">entrar <span class="aws-sharp"></span></a> -->
-                <a href="https://xgate.typeform.com/cadastro" class="btn menu w-button">criar conta <span class="aws-sharp"></span></a>
+                <a href="https://xgateglobal.typeform.com/cadastro" class="btn menu w-button">criar conta <span class="aws-sharp"></span></a>
               </li>
             </ul>
           </nav>
@@ -83,7 +83,7 @@
       <div data-w-id="200926d6-e3ea-1141-b7f1-996a08be826e" style="opacity:0" class="boxed">Expanda Sua Fronteira</div>
       <h1 data-w-id="0228446c-d26d-524a-0f8a-37808b7c5eb9" style="opacity:0" class="h1"><span class="bold">XGATE:</span> Sua plataforma de pagamentos para conquistar o mundo</h1>
       <h3 data-w-id="ad50bcd3-a472-ecc3-2be9-a5f712b19dca" style="opacity:0" class="h3">Pagamentos globais  simples e rápido em <span class="bold">Cripto e PIX.</span></h3>
-      <a data-w-id="a997bfb0-db6a-e3b6-16a4-45da2232ee34" style="opacity:0" href="https://xgate.typeform.com/cadastro" class="btn w-button">cadastre-se agora <span class="aws-sharp"></span></a>
+      <a data-w-id="a997bfb0-db6a-e3b6-16a4-45da2232ee34" style="opacity:0" href="https://xgateglobal.typeform.com/cadastro" class="btn w-button">cadastre-se agora <span class="aws-sharp"></span></a>
     </div>
     <div class="screen">
       <div data-w-id="71f2b2aa-6684-bf3e-2d22-4dd52e2bdf23" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="screenfly _3">
@@ -387,7 +387,7 @@
       <h3 class="h3">Deseja começar a <span class="bold">transformar suas operações</span> financeiras?</h3>
       <div class="cx-btns">
         <!-- <a href="#" class="btn inverter stroke w-button">entrar <span class="aws-sharp"></span></a> -->
-        <a href="https://xgate.typeform.com/cadastro" class="btn inverter w-button">cadastrar <span class="aws-sharp"></span></a>
+        <a href="https://xgateglobal.typeform.com/cadastro" class="btn inverter w-button">cadastrar <span class="aws-sharp"></span></a>
       </div>
     </div>
   </section>
@@ -732,7 +732,7 @@
             <h3 class="h3 mb20"><span class="bold">Entre em contato conosco</span> para transformar seu negócio com a XGATE.</h3>
             <a href="#" class="link"><span class="aws-sharp green"></span> +55 11 1234-56789</a>
             <a href="#" class="link"><span class="aws-sharp green"></span> contato@xgate.com</a>
-            <a href="https://xgate.typeform.com/cadastro" class="btn inverter w-button">fale conosco <span class="aws-sharp"></span></a>
+            <a href="https://xgateglobal.typeform.com/cadastro" class="btn inverter w-button">fale conosco <span class="aws-sharp"></span></a>
           </div><img src="images/Agrupar-1.png" loading="lazy" style="opacity:0" data-w-id="f6800946-1905-9de4-249d-f04c71b433a4" alt="" class="image">
         </div>
       </div>
