--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
         <div id="contato" class="cx-account ctt">
           <div data-w-id="bbf18274-376e-437a-8531-a8365b6b32a1" style="opacity:0" class="flexv mb60">
             <h3 class="h3 mb20"><span class="bold">Entre em contato conosco</span> para transformar seu negócio com a XGATE.</h3>
-            <a href="#" class="link"><span class="aws-sharp green"></span> +55 11 1234-56789</a>
-            <a href="#" class="link"><span class="aws-sharp green"></span> contato@xgate.com</a>
+            <a href="#" class="link"><span class="aws-sharp green"></span> +55 61 8560-0125</a>
+            <a href="#" class="link"><span class="aws-sharp green"></span> contato@xgateglobal.com</a>
             <a href="https://xgateglobal.typeform.com/cadastro" class="btn inverter w-button">fale conosco <span class="aws-sharp"></span></a>
           </div><img src="images/Agrupar-1.png" loading="lazy" style="opacity:0" data-w-id="f6800946-1905-9de4-249d-f04c71b433a4" alt="" class="image">
         </div>
@@ -851,7 +851,7 @@
       </div>
     </div>
     <div class="footer-divider"></div>
-    <div class="footer-copyright-center">Copyright © 2024 XGATE.</div>
+    <div class="footer-copyright-center">Copyright © 2025 XGATE.</div>
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6759f20ba5c2e01c808775a0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
